--- a/civwiki/nations.html
+++ b/civwiki/nations.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
-<script src="http://cdn.datatables.net/1.10.0/js/jquery.dataTables.js" type="text/javascript"></script>
-<link href="http://cdn.datatables.net/1.10.0/css/jquery.dataTables.css" type="text/css" rel="stylesheet"></link>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="https://cdn.datatables.net/1.10.0/js/jquery.dataTables.js" type="text/javascript"></script>
+<link href="https://cdn.datatables.net/1.10.0/css/jquery.dataTables.css" type="text/css" rel="stylesheet"></link>
 
 <script type="text/javascript">
 var tr = { Cha: "Харизма",  Ind: "Промышленник", Phi: "Философ", Org: "Организатор",
