--- a/civwiki/nations.html
+++ b/civwiki/nations.html
@@ -165,7 +165,7 @@ var shum = { nation: "Шумеры", tech1: tech.agr, tech2: tech.wheel,
                  building: "Зиккурат", unit: "Воин коршуна" };
 testdata.push($.extend({ trait1: tr.Cre, trait2: tr.Pro, leader: "Гильгамеш" }, shum));
 
-var abis = { nation: "Шумеры", tech1: tech.hunt, tech2: tech.mines,
+var abis = { nation: "Эфиопы", tech1: tech.hunt, tech2: tech.mines,
                  building: "Стела", unit: "Воин оромо" };
 testdata.push($.extend({ trait1: tr.Cre, trait2: tr.Org, leader: "Зара Якоб" }, abis));
 
