--- a/civwiki/nations.html
+++ b/civwiki/nations.html
@@ -95,7 +95,7 @@ var carthage = { nation: "Карфаген", tech1: tech.fish, tech2: tech.mines
                  building: "Котон", unit: "Нумидийский всадник" };
 testdata.push($.extend({ trait1: tr.Cha, trait2: tr.Fin, leader: "Ганнибал" }, carthage));
 
-var celts    = { nation: "Карфаген", tech1: tech.hunt, tech2: tech.mis,
+var celts    = { nation: "Культы", tech1: tech.hunt, tech2: tech.mis,
                  building: "Дан", unit: "Гальский мечник" };
 testdata.push($.extend({ trait1: tr.Cha, trait2: tr.Spi, leader: "Бренн" }, celts));
 testdata.push($.extend({ trait1: tr.Cha, trait2: tr.Agg, leader: "Боудика" }, celts));
