Exercises about IO

--- a/fp2017/exercises3.html
+++ b/fp2017/exercises3.html
@@ -431,17 +431,48 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="week2">Неделя 3</h2>
+<h2 id="_Упражнения_про_ввод_вывод">Упражнения про ввод-вывод</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Упражнений пока нет</p>
+<p>В задачах про тилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Реализовать <code>hcat</code>: UNIX утилиту <code>cat</code> на Haskell.</p>
+<div class="paragraph">
+<p>Без аргументов комндной строки она должна читать строки с <code>stdin</code> и сразу печатать их.</p>
+</div>
+<div class="paragraph">
+<p>Аргументы командной строки должны считаться именами файлов и <code>hcat</code> печатает содержимое этих файлов.</p>
+</div>
+</li>
+<li>
+<p>То же для утилиты <code>grep</code>.</p>
+<div class="paragraph">
+<p>Чтобы было совсем круто, надо совпадения выделять цветом.</p>
+</div>
+</li>
+</ul>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Note</div>
+</td>
+<td class="content">
+Не все эмуляторы терминала поддерживают цвета!
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-06 20:00:58 MSK
+Last updated 2017-09-09 14:33:16 MSK
 </div>
 </div>
 </body>
