--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -41,9 +41,18 @@
 </ul>
 </div>
 <div class="sect2">
-<h3 id="_Ссылки">Ссылки</h3>
+<h3 id="_Книги">Книги</h3>
 <div class="paragraph">
 <p><a href="http://learnyouahaskell.com/">Learn You a Haskell for Freat Good</a></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_Ссылки">Ссылки</h3>
+<div class="paragraph">
+<p><a href="https://vimeo.com/153042584">Yaron Minsky - Why OCaml</a>. Хорошо для общего развития: какие языки бывают, что от хорошего языка программирования требуется, и т.д.</p>
+</div>
+<div class="paragraph">
+<p><a href="http://queue.acm.org/detail.cfm?id=2038036">OCaml for the Masses</a> Большинстов аргументов переносимо и на Haskell.</p>
 </div>
 </div>
 </div>
@@ -55,7 +64,7 @@
 <p>Введение. Рекурсивные функции над числами</p>
 </div>
 <div class="paragraph">
-<p><a href="exercises1.html">Упражнения</a></p>
+<p><a href="exercises1.html">Упражнения 1</a></p>
 </div>
 </div>
 </div>
@@ -63,25 +72,17 @@
 <h2 id="week2">Неделя 2 (11 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Списки и всё с ними связанное.</p>
+<p><a href="exercises2.html">Упражнения 2 (Списки и прочее)</a></p>
 </div>
 <div class="paragraph">
-<p><a href="exercises2.html">Упражнения</a></p>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="week3">Неделя 3</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Типы данных</p>
+<p><a href="exercises3.html">Упражнения 3 (Про IO)</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-06 20:10:43 MSK
+Last updated 2017-09-09 15:07:46 MSK
 </div>
 </div>
 </body>
