--- a/fp2017/exercises2.html
+++ b/fp2017/exercises2.html
@@ -91,17 +91,13 @@ table {
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="week2">Неделя 2</h2>
+<h2 id="_Про_списки">Про списки</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_Задачи_от_М_Симуни">Задачи от М.Симуни</h3>
 <div class="paragraph">
 <p>Составлены М.Симуни (<a href="mailto:simuni@mail.ru">simuni@mail.ru</a>). Вы можете свободно копировать и воспроизводить эти задачи, при условии сохранения ссылки на составителя.</p>
 </div>
-<div class="olist arabic">
-<ol class="arabic" start="1">
-<li>
-<p>List item 7.</p>
 <div class="olist arabic">
 <ol class="arabic" start="1">
 <li>
@@ -190,50 +186,33 @@ table {
 </li>
 <li>
 <p>Описать функцию <code>upDown</code>, которая проверяет, верно ли, что в данном списке сначала строго возрастают, а потом, с какого-то момента, строго убывают.</p>
+<div class="paragraph">
+<p>Примеры вызова:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>upDown [2, 6, 9, 7, 3, 1]</code> - должна вернуть True</p>
 </li>
-</ol>
+<li>
+<p><code>upDown [2, 6, 9, 7, 3, 1, 8]</code> - должна вернуть False, потому что числа возрастают, убывают и потом снова возрастают.</p>
+</li>
+<li>
+<p><code>upDown [2, 6, 9]</code> - должна вернуть False, потому что числа только возрастают</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>М.б. лучше четко сформулировать, что это значит "сначала возрастают, потом убывают". Имеется в виду, что, если взять все пары стоящих рядом чисел и сравнить числа в парах, то сначала насколько раз (по крайней мере один раз) первое число будет меньше, а потом несколько раз (тоже по крайней мере один раз) первое число будет больше.</p>
 </div>
 </li>
-</ol>
-</div>
-<div class="openblock">
-<div class="content">
-<div class="paragraph">
-<p>+
-Примеры вызова:</p>
-</div>
-<div class="paragraph">
-<p>+
-  . upDown [2, 6, 9, 7, 3, 1] - должна вернуть True
-  . upDown [2, 6, 9, 7, 3, 1, 8] - должна вернуть False, потому что числа возрастают, убывают и потом снова возрастают.
-  . upDown [2, 6, 9] - должна вернуть False, потому что числа только возрастают</p>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<div class="title">Note</div>
-</td>
-<td class="content">
-М.б. лучше четко сформулировать, что это значит "сначала возрастают, потом убывают". Имеется в виду, что, если взять все пары стоящих рядом чисел и сравнить числа в парах, то сначала насколько раз (по крайней мере один раз) первое число будет меньше, а потом несколько раз (тоже по крайней мере один раз) первое число будет больше.
-</td>
-</tr>
-</table>
-</div>
-<div class="paragraph">
-<p>+</p>
-</div>
-</div>
-</div>
-<div class="olist loweralpha">
-<ol class="loweralpha" type="a">
 <li>
 <p>Написать функцию parts, которая для данного списка проверяет, можно ли его разбить на несколько строго возрастающих кусков одинаковой длины. Длина кусков должна быть не меньше 2. Кусок может быть и только один.</p>
 <div class="paragraph">
 <p>Примеры вызова:</p>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+<div class="ulist">
+<ul>
 <li>
 <p>parts [1, 2, 8, 2, 5, 6]</p>
 </li>
@@ -252,10 +231,7 @@ table {
 <li>
 <p>Тут ответ должен быть равен False.</p>
 </li>
-</ol>
-</div>
-</li>
-</ol>
+</ul>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -265,23 +241,32 @@ table {
 </td>
 <td class="content">
 В этой задаче есть более эффективные решения и менее эффективные. Если у вас будет менее эффективное, то я попрошу вас написать более эффективное (и немного подскажу, как).
-..  Написать функцию parts2, которая проверяет, можно ли в данном списке выбрать ровно половину элементов, чтобы
-- они строго возрастали
-- в оставшейся половине элементы тоже строго возрастали.
 </td>
 </tr>
 </table>
 </div>
+</li>
+<li>
+<p>Написать функцию parts2, которая проверяет, можно ли в данном списке выбрать ровно половину элементов, чтобы</p>
+<div class="ulist">
+<ul>
+<li>
+<p>они строго возрастали</p>
+</li>
+<li>
+<p>в оставшейся половине элементы тоже строго возрастали.</p>
 <div class="paragraph">
-<p>+
-В этой задаче элементы не обязательно брать подряд.</p>
+<p>В этой задаче элементы не обязательно брать подряд.</p>
 </div>
 <div class="paragraph">
-<p>+
-Примеры вызова:
-- parts2 [1, 3, 2, 4, 8, 9]. Ответ должен быть True (разбивается, например, на [1, 3, 4] и [2, 8, 9])
-- parts2 [2, 3, 4, 6, 1, 8, 9, 7]. Ответ должен быть False.</p>
+<p>Примеры вызова:</p>
 </div>
+</li>
+<li>
+<p>parts2 [1, 3, 2, 4, 8, 9]. Ответ должен быть True (разбивается, например, на [1, 3, 4] и [2, 8, 9])</p>
+</li>
+<li>
+<p>parts2 [2, 3, 4, 6, 1, 8, 9, 7]. Ответ должен быть False.</p>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -294,13 +279,19 @@ table {
 </tr>
 </table>
 </div>
+</li>
+</ul>
+</div>
+</li>
+</ol>
+</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-06 20:08:36 MSK
+Last updated 2017-09-14 21:13:44 MSK
 </div>
 </div>
 </body>
