--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -66,6 +66,9 @@
 <div class="paragraph">
 <p><a href="exercises1.html">Упражнения 1</a></p>
 </div>
+<div class="paragraph">
+<p>Если официальные упражения сделаны, можете поискать интересного среди <a href="exercises_all.html">упражнений, неотсортированных по темам</a></p>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -82,7 +85,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-09 15:07:46 MSK
+Last updated 2017-09-14 21:10:49 MSK
 </div>
 </div>
 </body>
