--- a/fp2017/exercises1.html
+++ b/fp2017/exercises1.html
@@ -618,6 +618,9 @@ add' x | x &gt; 0 = add' (x-1) . (+1)
 <div class="paragraph">
 <p>Также используется понятие вложенных пар&#8201;&#8212;&#8201;это когда в паре один из элементов тоже пара, а в нём один из элементов снова пара, и т.д. Например, бывают проавориентированные вложенные пары <code>(a,(b,(c,d)))</code> и левоориентированные&#8201;&#8212;&#8201;<code>(((a,b),c),d)</code>.</p>
 </div>
+<div class="paragraph">
+<p>В этих задачах не нужно описывать функции для случаев раз, два и три. Нужно предъявить метод, которым можно получать такие функции не приходя в сознание. В задачах про типы данных будет подсказка.</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -702,7 +705,7 @@ smth3 trois 1 2 3 -- [1,2,3]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-08 16:55:18 MSK
+Last updated 2017-09-14 21:29:10 MSK
 </div>
 </div>
 </body>
