--- a/fp2017/exercises3.html
+++ b/fp2017/exercises3.html
@@ -434,7 +434,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_Упражнения_про_ввод_вывод">Упражнения про ввод-вывод</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>В задачах про тилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.</p>
+<p>В задачах про утилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.</p>
+</div>
+<div class="paragraph">
+<p>Для облегчения написания, возможно, стоит прочитать про <code>do</code>-нотацию.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -467,12 +470,36 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 </table>
 </div>
+<div class="ulist">
+<ul>
+<li>
+<p>Реализовать аналог утилиты <code>ncal</code>, которая показывает календарь на данный месяц. Это упраженение скорее на форматирование вывода.
+Выделите, пожалуйста, текущий день цветом.</p>
+<div class="paragraph">
+<p><a href="https://wiki.haskell.org/Getting_the_current_date" class="bare">https://wiki.haskell.org/Getting_the_current_date</a></p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>$ ncal
+    September 2017
+Su     3 10 17 24
+Mo     4 11 18 25
+Tu     5 12 19 26
+We     6 13 20 27
+Th     7 14 21 28
+Fr  1  8 15 22 29
+Sa  2  9 16 23 30</pre>
+</div>
+</div>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-09 14:33:16 MSK
+Last updated 2017-09-14 21:22:40 MSK
 </div>
 </div>
 </body>
