--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -82,10 +82,18 @@
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="week3">Неделя 3 (18 сентября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="exercises4.html">Упражнения 4 (Про типы данных) их пока нет</a></p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-14 21:10:49 MSK
+Last updated 2017-09-14 21:29:31 MSK
 </div>
 </div>
 </body>
