Updated tasks about data types

--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -86,14 +86,14 @@
 <h2 id="week3">Неделя 3 (18 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="exercises4.html">Упражнения 4 (Про типы данных) их пока нет</a></p>
+<p><a href="exercises4.html">Упражнения 4 (Про типы данных)</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-14 21:29:31 MSK
+Last updated 2017-09-16 11:55:10 MSK
 </div>
 </div>
 </body>
