--- a/fp2017/exercises4.html
+++ b/fp2017/exercises4.html
@@ -185,7 +185,7 @@ table {
 <div class="title">Note</div>
 </td>
 <td class="content">
-Есть хорошая книжка на русском "Чисто функциональные структуры данных"
+Есть хорошая книжка на русском "Чисто функциональные структуры данных" Криса Окасаки.
 </td>
 </tr>
 </table>
@@ -233,7 +233,7 @@ table {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-15 21:54:17 MSK
+Last updated 2017-09-15 21:54:34 MSK
 </div>
 </div>
 </body>
