--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -45,6 +45,12 @@
 <div class="paragraph">
 <p><a href="http://learnyouahaskell.com/">Learn You a Haskell for Freat Good</a></p>
 </div>
+<div class="paragraph">
+<p>Можно также найти Р.Душкина "ФП на языке Haskell"</p>
+</div>
+<div class="paragraph">
+<p>А также некоторые задачи поможет решить "Purely Functional Data Structures" от Chris Okasaki (есть русское издание).</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_Ссылки">Ссылки</h3>
@@ -67,7 +73,7 @@
 <p><a href="exercises1.html">Упражнения 1</a></p>
 </div>
 <div class="paragraph">
-<p>Если официальные упражения сделаны, можете поискать интересного среди <a href="exercises_all.html">упражнений, неотсортированных по темам</a></p>
+<p>Если официальные упражения сделаны, можете поискать интересного среди <a href="exercises_all.html">упражнений, неотсортированных по темам</a>. И ещё тут планируются упраженеия посортированные, но официально необъявленные.</p>
 </div>
 </div>
 </div>
@@ -86,14 +92,28 @@
 <h2 id="week3">Неделя 3 (18 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="exercises4.html">Упражнения 4 (Про типы данных) их пока нет</a></p>
+<p><a href="exercises4.html">Упражнения 4 (Про типы данных)</a></p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week4">Неделя 4 (25 сентября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Упражнений на этоу неделю я обещал не задавать. Если кто-то всё зарешал, то выкладывайте на гитхаб решения, я попробую к чему-нибудь придраться.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week5">Неделя 5 (2 октября)</h2>
+<div class="sectionbody">
+
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-14 21:29:31 MSK
+Last updated 2017-09-19 17:03:50 MSK
 </div>
 </div>
 </body>
