--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -100,7 +100,7 @@
 <h2 id="week4">Неделя 4 (25 сентября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Упражнений на этоу неделю я обещал не задавать. Если кто-то всё зарешал, то выкладывайте на гитхаб решения, я попробую к чему-нибудь придраться.</p>
+<p>Упражнений на эту неделю я обещал не задавать. Если кто-то всё зарешал, то выкладывайте на гитхаб решения, я попробую к чему-нибудь придраться.</p>
 </div>
 </div>
 </div>
@@ -113,7 +113,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-19 17:03:50 MSK
+Last updated 2017-09-19 17:07:27 MSK
 </div>
 </div>
 </body>
