--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -110,37 +110,24 @@
 <div class="sect1">
 <h2 id="week5">Неделя 5 (2 октября)</h2>
 <div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="weeklast">Задачи "на потом"</h2>
+<div class="sectionbody">
 <div class="paragraph">
-<p>Задачи "на потом"</p>
+<p>Если официальные упражения сделаны, можете поискать интересного среди <a href="exercises_all.html">упражнений, неотсортированных по темам</a>. И ещё тут планируются упраженеия посортированные, но официально необъявленные.</p>
 </div>
-<div class="listingblock">
-<div class="content">
-<pre>Если официальные упражения сделаны, можете поискать интересного среди link:exercises_all.html[упражнений, неотсортированных по темам]. И ещё тут планируются упраженеия посортированные, но официально необъявленные.
-
-link:exercises5cps.html[Упражнения 4 (Про Continuation-passing style)]
-
-////
-[glossary]
-Example Glossary
-----------------
-Glossaries are optional. Glossaries entries are an example of a style
-of AsciiDoc labeled lists.
-
-[glossary]
-A glossary term::
-  The corresponding (indented) definition.
-
-A second glossary term::
-  The corresponding (indented) definition.
-////</pre>
-</div>
+<div class="paragraph">
+<p><a href="exercises5cps.html">Упражнения 4 (Про Continuation-passing style)</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-19 20:06:31 MSK
+Last updated 2017-09-19 20:35:44 MSK
 </div>
 </div>
 </body>
