Extend CPS examples

--- a/fp2017/exercises5cps.html
+++ b/fp2017/exercises5cps.html
@@ -104,7 +104,13 @@ table {
 <p>Аналогично предыдущему, fold через foldr.</p>
 </li>
 <li>
-<p>Опишите ADT для арифметики: там должны быть константы-числа и бинарные операции сложения и вычитания. Реализуйте функцию <code>eval</code>, которая вычисляет выражение в число, так, чтобы не расходовался стек.</p>
+<p>Спроектируйте <code>fold</code> для списков так, чтобы при вычислении можно было прерваться. Например, мы перемножаем спиок чисел; встретив 0 нужно остановиться и выдать ответ.</p>
+</li>
+<li>
+<p>Опишите ADT для арифметики: там должны быть константы-числа, переменные и бинарные операции сложения и вычитания. Реализуйте функцию <code>eval</code>, которая принимает начальные значения некоторых переменных и вычисляет выражение в число. Функция <code>eval</code> не должна сильно расходовать стек.</p>
+</li>
+<li>
+<p>Для предыдущего типа данные реализуйте функцию <code>simplify</code>, которая будет упрощать выражение, пока оно упрощается. Виды упрощений: операции над константами, умножение на ноль, вычитание из самого себя, common subexpression elimination, etc.</p>
 </li>
 </ol>
 </div>
@@ -114,7 +120,7 @@ table {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-19 20:15:02 MSK
+Last updated 2017-09-23 19:55:29 MSK
 </div>
 </div>
 </body>
