--- a/fp2017/exercises4.html
+++ b/fp2017/exercises4.html
@@ -106,13 +106,30 @@ table {
 </li>
 <li>
 <p>Применяет <code>f</code>  от данных, которые спрятаные внутри <code>Maybe</code></p>
-<div class="paragraph">
-<p>Решение должно быть лаконичное.</p>
-</div>
 </li>
 </ul>
 </div>
 </li>
+</ol>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Note</div>
+</td>
+<td class="content">
+OK google, billion-dollar mistake.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>+
+Решение должно быть лаконичное.</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
 <li>
 <p>Та же задача, но вместо нескольких аргументов&#8201;&#8212;&#8201;список из <code>Maybe _</code>.</p>
 </li>
@@ -233,7 +250,7 @@ table {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-15 21:54:34 MSK
+Last updated 2017-09-24 21:57:02 MSK
 </div>
 </div>
 </body>
