--- a/fp2017/index.html
+++ b/fp2017/index.html
@@ -110,7 +110,12 @@
 <div class="sect1">
 <h2 id="week5">Неделя 5 (2 октября)</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="exercises6.html">Упражнения про исчисление высказываний и немного про списки</a></p>
+</div>
+<div class="paragraph">
+<p>Что-то Вы забуксовали с решением домашних задач, не успев дойти до интересной темы (типы данных). Соберитесь (◑‿◐), свалить всё на сессию нельзя ещё 2 месяца.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -127,7 +132,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-19 20:35:44 MSK
+Last updated 2017-09-29 20:12:20 MSK
 </div>
 </div>
 </body>
